@@ -1,4 +1,5 @@
 
+  * Fixed bug adding a label in the radio label editor
   * Double click over the time can switch between time current track pos or
     time left
   * Added option in preferences to configure the silence detector. To
